--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,24 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".TestActivity">
+        <activity android:name=".Main9Activity"/>
+        <activity android:name=".Main8Activity" />
+        <activity android:name=".Main7Activity" />
+        <activity android:name=".Main6Activity" />
+        <activity android:name=".Main5Activity" />
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".Main3Activity" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity android:name=".CanvasSample"/>-->
-        <!--<activity android:name=".TestActivity1"/>-->
-        <!--<activity android:name=".CustomViewGroup"/>-->
-        <!--<activity android:name=".TestActivity"/>-->
+        <activity android:name=".TestActivity" />
+        <activity android:name=".TestActivity1" />
+        <activity android:name=".CustomViewGroup" />
     </application>
 
 </manifest>
